@@ -1,0 +1,6 @@
+Contributors
+============
+
+ * Andrew Alcock
+ * Zenobius Jiricek
+ * Oliver Drake
