@@ -1,4 +1,0 @@
-Contributor Credits
-===================
-
- * Andrew Alcock
