@@ -1,7 +1,7 @@
 License
 =======
 
-Copyright (c) 2011-2012, BJ Dierkes 
+Copyright (c) 2011-2013, BJ Dierkes 
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without 
